--- a/templates/env/env.example
+++ b/templates/env/env.example
@@ -25,6 +25,11 @@ PROSODY_ADMINS=admin@atl.chat
 # Let's Encrypt email for certificate notifications
 LETSENCRYPT_EMAIL=admin@allthingslinux.org
 
+# Cloudflare DNS credentials file must be mounted at
+# /etc/letsencrypt/cloudflare-credentials.ini for certbot services
+# Example content:
+# dns_cloudflare_api_token = YOUR_API_TOKEN
+
 # ============================================================================
 # DATABASE CONFIGURATION
 # ============================================================================
