--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -37,8 +37,9 @@ http {
         listen [::]:443 ssl http2;
         server_name xmpp.atl.chat;
 
-        ssl_certificate /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/fullchain.pem;
-        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/xmpp.atl.chat/privkey.pem;
+        # Use existing atl.chat certificate (covers xmpp.atl.chat with wildcard)
+        ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
+        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
         ssl_prefer_server_ciphers off;
