--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -83,9 +83,23 @@ http {
             proxy_cache off;
         }
 
-        # Upload (https://xmpp.atl.chat/upload)
+        # Upload (Prosody serves 'file_share' at /file_share). Keep /upload as an alias.
         location /upload {
-            proxy_pass http://xmpp-prosody:5280/upload;
+            proxy_pass http://xmpp-prosody:5280/file_share;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            client_max_body_size 100m;
+            proxy_request_buffering off;
+            proxy_buffering off;
+        }
+
+        # Native path (https://xmpp.atl.chat/file_share)
+        location /file_share {
+            proxy_pass http://xmpp-prosody:5280/file_share;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -137,10 +151,11 @@ http {
             proxy_set_header Host $host;
         }
 
-        # Info page
+        # Static site at root (serves /usr/share/nginx/html/index.html)
         location / {
-            return 200 'XMPP Server - WebSocket endpoint: wss://xmpp.atl.chat/xmpp-websocket';
-            add_header Content-Type text/plain;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri /index.html;
         }
     }
 }
