--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -236,6 +236,7 @@ services:
     volumes:
       - ./deployment/reverse-proxy/nginx/nginx-docker.conf:/etc/nginx/nginx.conf:ro
       - ./certs-dev:/opt/xmpp.atl.chat/certs:ro
+      - ./static-files:/usr/share/nginx/html:ro
     depends_on:
       xmpp-prosody:
         condition: service_healthy
