--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -151,11 +151,15 @@ http {
             proxy_set_header Host $host;
         }
 
-        # Static site at root (serves /usr/share/nginx/html/index.html)
+        # Proxy root to Prosody http_files (Prosody serves static)
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
+            proxy_pass http://xmpp-prosody:5280/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_redirect off;
         }
     }
 }
