--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -49,6 +49,7 @@ services:
       - xmpp_certs:/etc/prosody/certs  # Self-signed certificates
       - ./scripts:/opt/prosody/scripts:ro
       - ./.runtime/logs:/var/log/prosody
+      - ./static-files:/usr/share/prosody/www:ro
     healthcheck:
       test: ['CMD', '/usr/local/bin/health-check.sh']
       interval: 15s
@@ -236,7 +237,6 @@ services:
     volumes:
       - ./deployment/reverse-proxy/nginx/nginx-docker.conf:/etc/nginx/nginx.conf:ro
       - ./certs-dev:/opt/xmpp.atl.chat/certs:ro
-      - ./static-files:/usr/share/nginx/html:ro
     depends_on:
       xmpp-prosody:
         condition: service_healthy
