--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - ./.runtime/certs:/etc/prosody/certs
       - ./scripts:/opt/prosody/scripts:ro
       - ./.runtime/logs:/var/log/prosody
+      - ./static-files:/usr/share/prosody/www:ro
     healthcheck:
       test: ['CMD', '/usr/local/bin/health-check.sh']
       interval: 30s
@@ -106,7 +107,6 @@ services:
     volumes:
       - ./deployment/reverse-proxy/nginx/nginx-docker.conf:/etc/nginx/nginx.conf:ro
       - ./.runtime/certs:/opt/xmpp.atl.chat/certs:ro
-      - ./static-files:/usr/share/nginx/html:ro
     depends_on:
       - xmpp-prosody
     networks:
