--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -33,8 +33,9 @@ http {
 
     # HTTPS server for xmpp.atl.chat (service host)
     server {
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        http2 on;
         server_name xmpp.atl.chat;
 
         # Use existing atl.chat certificate (covers xmpp.atl.chat with wildcard)
