chore(prosody): use Lua.table.insert to avoid deprecation warning; chore(nginx): redirect /file-share -> /file_share

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -96,6 +96,11 @@ http {
             proxy_buffering off;
         }
 
+        # Redirect dashed variant to underscore path
+        location = /file-share {
+            return 301 /file_share;
+        }
+
         # Native path (https://xmpp.atl.chat/file_share)
         location /file_share {
             proxy_pass http://xmpp-prosody:5280/file_share;
