feat(nginx): serve /health,/metrics,/files,/admin at proxy; mount static files into nginx

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -115,44 +115,32 @@ http {
             proxy_buffering off;
         }
 
-        # Admin (optional)
+        # Admin endpoint served by Nginx (no proxy)
         location /admin {
-            proxy_pass http://xmpp-prosody:5280/admin;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            # Restrict access as needed
+            default_type text/plain;
+            add_header X-Content-Type-Options nosniff always;
+            return 403 "Admin is disabled on the proxy.\n";
         }
 
-        # Metrics (optional)
-        location /metrics {
-            proxy_pass http://xmpp-prosody:5280/metrics;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # Metrics served by Nginx (stub_status)
+        location = /metrics {
+            stub_status;
+            access_log off;
         }
 
-        # Static files (optional)
+        # Static files served by Nginx directly from /usr/share/nginx/html
         location /files {
-            proxy_pass http://xmpp-prosody:5280/files;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            alias /usr/share/nginx/html/;
+            autoindex off;
+            try_files $uri $uri/ =404;
             expires 1h;
             add_header Cache-Control "public, immutable";
         }
 
-        # Health
-        location /health {
-            proxy_pass http://xmpp-prosody:5280/health;
-            proxy_http_version 1.1;
-            proxy_read_timeout 10s;
-            proxy_send_timeout 10s;
-            proxy_connect_timeout 5s;
-            proxy_set_header Host $host;
+        # Health endpoint served by Nginx (no proxy)
+        location = /health {
+            default_type text/plain;
+            return 200 "ok\n";
         }
 
         # Proxy root to Prosody http_files (Prosody serves static)
