--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -122,8 +122,17 @@ http {
             return 403 "Admin is disabled on the proxy.\n";
         }
 
-        # Metrics served by Nginx (stub_status)
+        # Prosody OpenMetrics (mod_http_openmetrics)
         location = /metrics {
+            proxy_pass http://xmpp-prosody:5280/metrics;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Nginx stub status moved to a separate endpoint
+        location = /nginx-status {
             stub_status;
             access_log off;
         }
