feat(upload): move endpoint to /upload in Prosody; update nginx to proxy /upload and redirect /file_share,/file-share

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -82,9 +82,9 @@ http {
             proxy_cache off;
         }
 
-        # Upload (Prosody serves 'file_share' at /file_share). Keep /upload as an alias.
+        # Upload (Prosody now serves 'upload' at /upload)
         location /upload {
-            proxy_pass http://xmpp-prosody:5280/file_share;
+            proxy_pass http://xmpp-prosody:5280/upload;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -101,18 +101,12 @@ http {
             return 301 /file_share;
         }
 
-        # Native path (https://xmpp.atl.chat/file_share)
-        location /file_share {
-            proxy_pass http://xmpp-prosody:5280/file_share;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 300s;
-            proxy_send_timeout 300s;
-            client_max_body_size 100m;
-            proxy_request_buffering off;
-            proxy_buffering off;
+        # Redirect legacy file_share endpoints to /upload
+        location = /file_share {
+            return 301 /upload/;
+        }
+        location /file_share/ {
+            return 301 /upload/;
         }
 
         # Admin endpoint served by Nginx (no proxy)
