--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -125,6 +125,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # XEP-0156 HTTP Alt-Connect discovery
+        location /.well-known/ {
+            proxy_pass http://xmpp-prosody:5280/.well-known/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Nginx stub status moved to a separate endpoint
         location = /nginx-status {
             stub_status;
