--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -125,10 +125,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # XEP-0156 HTTP Alt-Connect discovery
+        # XEP-0156 HTTP Alt-Connect discovery (served over HTTPS by Prosody)
         location /.well-known/ {
-            proxy_pass http://xmpp-prosody:5280/.well-known/;
+            proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
