--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -130,6 +130,7 @@ http {
             proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
+            proxy_ssl_name $host;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
