--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -116,10 +116,12 @@ http {
             return 403 "Admin is disabled on the proxy.\n";
         }
 
-        # Prosody OpenMetrics (mod_http_openmetrics)
+        # Prosody OpenMetrics (mod_http_openmetrics) over HTTPS upstream
         location = /metrics {
-            proxy_pass http://xmpp-prosody:5280/metrics;
+            proxy_pass https://xmpp-prosody:5281/metrics;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name $host;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
