--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -68,8 +68,42 @@ http {
             proxy_set_header X-Forwarded-Host $server_name;
         }
 
+        # Friendly WebSocket alias
+        location /ws {
+            proxy_pass http://xmpp-prosody:5280/xmpp-websocket;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_read_timeout 900s;
+            proxy_send_timeout 900s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            proxy_redirect off;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+
         # BOSH (https://xmpp.atl.chat/http-bind)
         location /http-bind {
+            proxy_pass http://xmpp-prosody:5280/http-bind;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 900s;
+            proxy_send_timeout 900s;
+            proxy_connect_timeout 60s;
+            proxy_buffering off;
+            proxy_cache off;
+        }
+
+        # Friendly BOSH alias
+        location /bosh {
             proxy_pass http://xmpp-prosody:5280/http-bind;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
