--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -30,6 +30,13 @@ http {
         return 301 https://$server_name$request_uri;
     }
 
+    # Minimal vhost for atl.chat to serve only XEP-0156 discovery
+    server {
+        listen 80;
+        server_name atl.chat;
+        return 301 https://$server_name$request_uri;
+    }
+
     # HTTPS server for xmpp.atl.chat (service host)
     server {
         listen 443 ssl;
@@ -203,6 +210,38 @@ http {
             proxy_buffering off;
             proxy_redirect off;
         }
+    }
+
+    # HTTPS server for atl.chat to expose only /.well-known/* (XEP-0156)
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name atl.chat;
+
+        ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
+        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
+        ssl_prefer_server_ciphers off;
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options nosniff always;
+        add_header X-Frame-Options DENY always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # Only proxy /.well-known/* to Prosody (served over HTTPS)
+        location /.well-known/ {
+            proxy_pass https://xmpp-prosody:5281/.well-known/;
+            proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name $host;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Everything else = 404 (we don't serve atl.chat content here)
+        location / { return 404; }
     }
 }
 
