--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -234,8 +234,8 @@ http {
             proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
-            proxy_ssl_name $host;
-            proxy_set_header Host $host;
+            proxy_ssl_name xmpp.atl.chat;
+            proxy_set_header Host xmpp.atl.chat;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
