feat(nginx): redirect /.well-known -> /.well-known/host-meta on both hosts

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -169,6 +169,7 @@ http {
         }
 
         # XEP-0156 HTTP Alt-Connect discovery (served over HTTPS by Prosody)
+        location = /.well-known { return 301 /.well-known/host-meta; }
         location /.well-known/ {
             proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
@@ -230,6 +231,7 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
 
         # Only proxy /.well-known/* to Prosody (served over HTTPS)
+        location = /.well-known { return 301 /.well-known/host-meta; }
         location /.well-known/ {
             proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
