fix(discovery): advertise http host as service host; add atl.chat redirects for /ws and /bosh/http-bind

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -242,6 +242,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Friendly redirects for clients that tried defaults on atl.chat
+        location = /ws { return 301 https://xmpp.atl.chat/ws; }
+        location = /http-bind { return 301 https://xmpp.atl.chat/http-bind; }
+        location = /bosh { return 301 https://xmpp.atl.chat/bosh; }
+
         # Everything else = 404 (we don't serve atl.chat content here)
         location / { return 404; }
     }
