feat(xep-0156): add CORS and OPTIONS handling for /.well-known host-meta on both vhosts

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -178,6 +178,14 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # CORS for host-meta (XEP-0156 recommends allowing cross-origin reads)
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type" always;
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Max-Age 7200 always;
+                return 204;
+            }
         }
 
         # Nginx stub status moved to a separate endpoint
@@ -240,6 +248,14 @@ http {
             proxy_set_header Host xmpp.atl.chat;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # CORS for host-meta (XEP-0156 recommends allowing cross-origin reads)
+            add_header Access-Control-Allow-Origin "*" always;
+            add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type" always;
+            if ($request_method = OPTIONS) {
+                add_header Access-Control-Max-Age 7200 always;
+                return 204;
+            }
         }
 
         # Friendly redirects for clients that tried defaults on atl.chat
