feat(conversejs): integrate mod_conversejs web client\n\n- Enable mod_conversejs in Prosody modules\n- Install community module in image build\n- Add Nginx and Apache proxy for /conversejs\n- Relax CSP to allow Converse CDN and XMPP endpoints\n- Document module in reference with links to docs\n\nRefs: https://modules.prosody.im/mod_conversejs.html https://conversejs.org/

--- a/deployment/reverse-proxy/apache/apache-websocket.conf
+++ b/deployment/reverse-proxy/apache/apache-websocket.conf
@@ -165,6 +165,15 @@ ExpiresByType image/* "access plus 1 day"
 </Location>
 
 # ================================================================
+# Converse.js (served by Prosody mod_conversejs)
+# ================================================================
+<Location "/conversejs/">
+ProxyPass "https://127.0.0.1:5281/conversejs/"
+ProxyPassReverse "https://127.0.0.1:5281/conversejs/"
+RequestHeader set X-Forwarded-Proto "https"
+</Location>
+
+# ================================================================
 # Health Check Endpoint
 # ================================================================
 <Location "/health">
