--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -188,6 +188,20 @@ http {
             }
         }
 
+        # Converse.js app served by Prosody (mod_conversejs)
+        # https://modules.prosody.im/mod_conversejs.html
+        location /conversejs/ {
+            proxy_pass https://xmpp-prosody:5281/conversejs/;
+            proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name $host;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_redirect off;
+        }
+
         # Nginx stub status moved to a separate endpoint
         location = /nginx-status {
             stub_status;
