--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,10 +114,10 @@ services:
       - xmpp_network
 
   # Converse.js web client (served by Nginx container)
-  xmpp-converse:
+  xmpp-conversejs:
     image: nginx:stable-alpine
-    container_name: xmpp-converse
-    hostname: xmpp-converse
+    container_name: xmpp-conversejs
+    hostname: xmpp-conversejs
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
@@ -129,8 +129,7 @@ services:
         max-file: "5"
         compress: "true"
     volumes:
-      - ./web/webclient:/usr/share/nginx/html:ro
-      - ./web/webclient/nginx-webclient.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./web/conversejs:/usr/share/nginx/html:ro
     depends_on:
       - xmpp-prosody
     networks:
