--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -192,7 +192,7 @@ http {
         # https://modules.prosody.im/mod_conversejs.html
         # Switched to dedicated Converse web container
         location /conversejs/ {
-            proxy_pass http://xmpp-converse/;
+            proxy_pass http://xmpp-conversejs/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
