--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     container_name: xmpp-prosody
     hostname: xmpp-prosody
     restart: unless-stopped
+    init: true
     env_file:
       - path: .env
         required: true
@@ -56,6 +57,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 60s
+    stop_grace_period: 60s
     # Production resource limits
     deploy:
       resources:
@@ -78,9 +80,9 @@ services:
       nproc:
         soft: 32768
         hard: 32768
-    # depends_on:
-    #   xmpp-postgres:
-    #     condition: service_healthy
+    depends_on:
+      xmpp-postgres:
+        condition: service_healthy
     networks:
       - xmpp_network
 
@@ -92,6 +94,7 @@ services:
     container_name: xmpp-nginx
     hostname: xmpp-nginx
     restart: unless-stopped
+    init: true
     security_opt:
       - no-new-privileges:true
       - apparmor:docker-default
@@ -104,6 +107,8 @@ services:
     ports:
       - '${NGINX_HTTP_PORT:-80}:80'
       - '${NGINX_HTTPS_PORT:-443}:443'
+    stop_signal: SIGQUIT
+    stop_grace_period: 30s
     volumes:
       - ./deployment/reverse-proxy/nginx/nginx-docker.conf:/etc/nginx/nginx.conf:ro
       - ./.runtime/certs:/opt/xmpp.atl.chat/certs:ro
@@ -118,6 +123,7 @@ services:
     container_name: xmpp-conversejs
     hostname: xmpp-conversejs
     restart: unless-stopped
+    init: true
     security_opt:
       - no-new-privileges:true
       - apparmor:docker-default
@@ -131,6 +137,8 @@ services:
       - ./web/conversejs:/usr/share/nginx/html:ro
     depends_on:
       - xmpp-prosody
+    stop_signal: SIGQUIT
+    stop_grace_period: 30s
     networks:
       - xmpp_network
 
@@ -142,6 +150,8 @@ services:
     container_name: xmpp-postgres
     hostname: xmpp-postgres
     restart: unless-stopped
+    stop_signal: SIGTERM
+    stop_grace_period: 60s
     env_file:
       - path: .env
         required: true
@@ -352,6 +362,7 @@ services:
     env_file:
       - path: .env
         required: true
+    init: true
     volumes:
       - ./.runtime:/app/.runtime
       - ./scripts:/app/scripts:ro
@@ -360,11 +371,10 @@ services:
     command: >
       sh -c "
         apk add --no-cache bash curl jq openssl docker-cli &&
-        while true; do
-          ./scripts/certificate-monitor.sh monitor
-          sleep ${CERT_CHECK_INTERVAL:-3600}
-        done
+        chmod +x /app/scripts/cert-monitor-runner.sh &&
+        /app/scripts/cert-monitor-runner.sh
       "
+    stop_grace_period: 10s
     networks:
       - xmpp_network
     restart: unless-stopped
