--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -30,6 +30,13 @@ http {
         return 301 https://$server_name$request_uri;
     }
 
+    # Redirect HTTP to HTTPS for upload.atl.chat
+    server {
+        listen 80;
+        server_name upload.atl.chat;
+        return 301 https://$server_name$request_uri;
+    }
+
     # Minimal vhost for atl.chat to serve only XEP-0156 discovery
     server {
         listen 80;
@@ -222,6 +229,12 @@ http {
             return 200 "ok\n";
         }
 
+        # Health endpoint served by Nginx (no proxy)
+        location = /health {
+            default_type text/plain;
+            return 200 "ok\n";
+        }
+
         # Proxy root to Prosody http_files (Prosody serves static)
         location / {
             proxy_pass http://xmpp-prosody:5280/;
@@ -231,6 +244,45 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_buffering off;
             proxy_redirect off;
+        }
+    }
+
+    # HTTPS server for upload.atl.chat (clean upload host)
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name upload.atl.chat;
+
+        # Use existing atl.chat certificate (covers upload.atl.chat with wildcard)
+        ssl_certificate /opt/xmpp.atl.chat/certs/live/atl.chat/fullchain.pem;
+        ssl_certificate_key /opt/xmpp.atl.chat/certs/live/atl.chat/privkey.pem;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS;
+        ssl_prefer_server_ciphers off;
+
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options nosniff always;
+        add_header X-Frame-Options DENY always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # Proxy everything to Prosody upload endpoint on http://xmpp-prosody:5280/upload
+        location / {
+            proxy_pass http://xmpp-prosody:5280/upload/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300s;
+            proxy_send_timeout 300s;
+            client_max_body_size 100m;
+            proxy_request_buffering off;
+            proxy_buffering off;
+        }
+
+        # Health endpoint
+        location = /health {
+            default_type text/plain;
+            return 200 "ok\n";
         }
     }
 
