fix(proxy): avoid SNI mismatch for /.well-known by proxying to prosody HTTP (5280) with Host=xmpp.atl.chat

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -297,13 +297,11 @@ http {
         add_header X-Frame-Options DENY always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Only proxy /.well-known/* to Prosody (served over HTTPS)
+        # Only proxy /.well-known/* to Prosody (served over HTTP upstream to avoid SNI issues)
         location = /.well-known { return 301 /.well-known/host-meta; }
         location /.well-known/ {
-            proxy_pass https://xmpp-prosody:5281/.well-known/;
+            proxy_pass http://xmpp-prosody:5280/.well-known/;
             proxy_http_version 1.1;
-            proxy_ssl_server_name on;
-            proxy_ssl_name xmpp.atl.chat;
             proxy_set_header Host xmpp.atl.chat;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
