--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - '${PROSODY_S2S_DIRECT_TLS_PORT:-5270}:5270'
       - '${PROSODY_HTTP_PORT:-5280}:5280'
       - '${PROSODY_HTTPS_PORT:-5281}:5281'
+      - '${PROSODY_PROXY65_PORT:-5000}:5000'
     volumes:
       - ./core/config:/etc/prosody/config:ro
       - xmpp_prosody_data:/var/lib/prosody/data
