--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -302,7 +302,8 @@ http {
         location /.well-known/ {
             proxy_pass http://xmpp-prosody:5280/.well-known/;
             proxy_http_version 1.1;
-            proxy_set_header Host xmpp.atl.chat;
+            # Host header must match the XMPP domain (VirtualHost), so altconnect serves atl.chat
+            proxy_set_header Host atl.chat;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             # CORS for host-meta (XEP-0156 recommends allowing cross-origin reads)
