--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -297,11 +297,13 @@ http {
         add_header X-Frame-Options DENY always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Only proxy /.well-known/* to Prosody (served over HTTP upstream to avoid SNI issues)
+        # Only proxy /.well-known/* to Prosody (HTTPS upstream; requires SNI)
         location = /.well-known { return 301 /.well-known/host-meta; }
         location /.well-known/ {
-            proxy_pass http://xmpp-prosody:5280/.well-known/;
+            proxy_pass https://xmpp-prosody:5281/.well-known/;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name atl.chat;
             # Host header must match the XMPP domain (VirtualHost), so altconnect serves atl.chat
             proxy_set_header Host atl.chat;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
