--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -64,8 +64,10 @@ http {
 
         # WebSocket (wss://xmpp.atl.chat/xmpp-websocket)
         location /xmpp-websocket {
-            proxy_pass http://xmpp-prosody:5280/xmpp-websocket;
+            proxy_pass https://xmpp-prosody:5281/xmpp-websocket;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name xmpp.atl.chat;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Host $host;
@@ -84,8 +86,10 @@ http {
 
         # Friendly WebSocket alias
         location /ws {
-            proxy_pass http://xmpp-prosody:5280/xmpp-websocket;
+            proxy_pass https://xmpp-prosody:5281/xmpp-websocket;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name xmpp.atl.chat;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Host $host;
@@ -104,8 +108,10 @@ http {
 
         # BOSH (https://xmpp.atl.chat/http-bind)
         location /http-bind {
-            proxy_pass http://xmpp-prosody:5280/http-bind;
+            proxy_pass https://xmpp-prosody:5281/http-bind;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name xmpp.atl.chat;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -118,8 +124,10 @@ http {
 
         # Friendly BOSH alias
         location /bosh {
-            proxy_pass http://xmpp-prosody:5280/http-bind;
+            proxy_pass https://xmpp-prosody:5281/http-bind;
             proxy_http_version 1.1;
+            proxy_ssl_server_name on;
+            proxy_ssl_name xmpp.atl.chat;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
