fix(proxy): use SNI name atl.chat for upstream HTTPS to match Prosody service certs

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -67,7 +67,7 @@ http {
             proxy_pass https://xmpp-prosody:5281/xmpp-websocket;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
-            proxy_ssl_name xmpp.atl.chat;
+            proxy_ssl_name atl.chat;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Host $host;
@@ -89,7 +89,7 @@ http {
             proxy_pass https://xmpp-prosody:5281/xmpp-websocket;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
-            proxy_ssl_name xmpp.atl.chat;
+            proxy_ssl_name atl.chat;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Host $host;
@@ -111,7 +111,7 @@ http {
             proxy_pass https://xmpp-prosody:5281/http-bind;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
-            proxy_ssl_name xmpp.atl.chat;
+            proxy_ssl_name atl.chat;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -127,7 +127,7 @@ http {
             proxy_pass https://xmpp-prosody:5281/http-bind;
             proxy_http_version 1.1;
             proxy_ssl_server_name on;
-            proxy_ssl_name xmpp.atl.chat;
+            proxy_ssl_name atl.chat;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
