--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -267,9 +267,10 @@ http {
         add_header X-Frame-Options DENY always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Proxy everything to Prosody upload endpoint on http://xmpp-prosody:5280/upload
+        # Proxy to Prosody; keep original URI to avoid duplicating /upload
+        # Prosody serves upload at /upload, and returned URLs include that path
         location / {
-            proxy_pass http://xmpp-prosody:5280/upload/;
+            proxy_pass http://xmpp-prosody:5280;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
