--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -267,10 +267,12 @@ http {
         add_header X-Frame-Options DENY always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Proxy to Prosody; keep original URI to avoid duplicating /upload
-        # Prosody serves upload at /upload, and returned URLs include that path
+        # Proxy to Prosody HTTPS; keep original URI (includes /upload)
+        # Prosody serves upload via HTTPS and expects SNI/Host = upload.atl.chat
         location / {
-            proxy_pass http://xmpp-prosody:5280;
+            proxy_pass https://xmpp-prosody:5281;
+            proxy_ssl_server_name on;
+            proxy_ssl_name upload.atl.chat;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
