refactor(network.cfg.lua): remove commented lines for cleaner configuration chore(metrics.cfg.lua): remove unused metrics configuration file chore(prosody.cfg.lua): update configuration to exclude removed metrics file feat(nginx-docker.conf): add fallback mechanism for dynamic content
The network configuration file is cleaned up by removing commented lines that are not needed, improving readability. The metrics configuration file is removed as it is no longer in use, and the main configuration file is updated to reflect this removal. In the Nginx configuration, a fallback mechanism is added to handle dynamic content by directing it to Prosody, enhancing the server's ability to serve both static and dynamic content efficiently.

--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -239,6 +239,12 @@ http {
 
         # Proxy root to Prosody http_files (Prosody serves static)
         location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ @prosody;
+        }
+
+        # Fallback to Prosody for dynamic content
+        location @prosody {
             proxy_pass http://xmpp-prosody:5280/;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
