--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -237,15 +237,15 @@ http {
             return 200 "ok\n";
         }
 
-        # Proxy root to Prosody http_files (Prosody serves static)
+        # Serve static files first, then proxy to Prosody
         location / {
             root /usr/share/nginx/html;
-            try_files $uri $uri/ @prosody;
+            try_files $uri $uri/ @prosody_fallback;
         }
 
         # Fallback to Prosody for dynamic content
-        location @prosody {
-            proxy_pass http://xmpp-prosody:5280/;
+        location @prosody_fallback {
+            proxy_pass http://xmpp-prosody:5280;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
