--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -7,6 +7,7 @@ worker_processes  auto;
 
 events {
     worker_connections  1024;
+    use epoll;
 }
 
 http {
@@ -16,8 +17,9 @@ http {
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
-    keepalive_timeout  65;
+    keepalive_timeout  75 20;
     types_hash_max_size 2048;
+    ignore_invalid_headers on;
 
     # Optional rate limiting zones (not enabled by default)
     # limit_req_zone $binary_remote_addr zone=websocket:10m rate=10r/m;
