fix(docker-compose.yml, env.example): update TURN server port range to a safer and more manageable range
The TURN server's RTP relay port range is updated from 49152-65535 to 50000-50100. This change reduces the number of open ports from 16384 to 100, which enhances security by limiting the exposure of open ports. It also simplifies network management and reduces the potential attack surface. The change is reflected in both the `docker-compose.yml` and the `env.example` files to ensure consistency across configuration and documentation.

--- a/templates/env/env.example
+++ b/templates/env/env.example
@@ -180,8 +180,8 @@ TURN_SECRET=ChangeMe123!
 # TURN server ports
 TURN_PORT=3478                     # STUN/TURN port
 TURNS_PORT=5349                    # TURN over TLS port
-TURN_MIN_PORT=49152                # RTP relay port range start
-TURN_MAX_PORT=65535                # RTP relay port range end
+TURN_MIN_PORT=50000                # RTP relay port range start (safer range)
+TURN_MAX_PORT=50100                # RTP relay port range end (only 100 ports)
 
 # TURN server authentication
 TURN_USERNAME=prosody
