feat(logging.cfg.lua): add internal statistics and openmetrics configuration
Add internal statistics collection and manual interval setting to
enhance monitoring capabilities. Configure OpenMetrics to allow
connections from loopback and a specific CIDR range for internal
scraping, improving security and control over metrics access.

fix(docker-compose.yml): update TURN server TLS settings and remove loopback peers restriction

Remove the TURN_NO_LOOPBACK_PEERS environment variable and its
corresponding command-line option to simplify configuration. Update
TLS settings to enforce a minimum version of 1.2, enhancing security
by ensuring stronger encryption protocols are used.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -230,7 +230,6 @@ services:
       - '${TURNS_PORT:-5349}:5349/udp'
       - '${TURN_MIN_PORT:-50000}-${TURN_MAX_PORT:-50100}:50000-50100/udp'
     environment:
-      - TURN_NO_LOOPBACK_PEERS=true
       - TURN_NO_MULTICAST_PEERS=true
       - TURN_STALE_NONCE=true
       - TURN_SECURE_STUN=true
@@ -249,15 +248,11 @@ services:
         --lt-cred-mech
         --use-auth-secret
         --static-auth-secret=${TURN_SECRET:-ChangeMe123!}
-        --no-loopback-peers
         --no-multicast-peers
         --mobility
         --no-cli
-        --no-tlsv1
-        --no-tlsv1_1
+        --tls-min-version=1.2
         --cipher-list=ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS
-        --no-sslv2
-        --no-sslv3
         --log-file=stdout
         --simple-log
     # Production resource limits
