feat(coturn): add dedicated COTURN configuration file for improved management
Introduce a new `turnserver.conf` file for COTURN configuration,
allowing for a more organized and secure setup. This change
centralizes configuration settings, making it easier to manage
and update COTURN settings without modifying the `docker-compose.yml`
directly.

chore(docker-compose): streamline COTURN service configuration

Remove inline COTURN configuration from `docker-compose.yml` and
replace it with a reference to the new `turnserver.conf` file.
This change reduces clutter in the `docker-compose.yml` and
leverages the dedicated configuration file for better maintainability.

test(scripts): update test script to check for COTURN config file

Enhance the `test-turn-config.sh` script to verify the presence
of the new `turnserver.conf` file, ensuring that the COTURN
configuration is correctly set up and integrated.

These changes improve the maintainability and security of the
COTURN setup by using a dedicated configuration file, making
it easier to manage and update settings while ensuring that
the configuration is correctly applied and tested.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -230,31 +230,15 @@ services:
       - '${TURNS_PORT:-5349}:5349/udp'
       - '${TURN_MIN_PORT:-50000}-${TURN_MAX_PORT:-50100}:50000-50100/udp'
     environment:
-      - TURN_NO_MULTICAST_PEERS=true
-      - TURN_STALE_NONCE=true
-      - TURN_SECURE_STUN=true
-      - TURN_LOG_FILE=stdout
-      - TURN_VERBOSE=false
+      - TURN_SECRET=${TURN_SECRET:-ChangeMe123!}
+      - TURN_REALM=${TURN_REALM:-atl.chat}
+      - TURN_DOMAIN=${TURN_DOMAIN:-atl.chat}
     volumes:
       - xmpp_coturn_data:/var/lib/coturn
+      - ./deployment/coturn/turnserver.conf:/etc/coturn/turnserver.conf:ro
     command: >
       turnserver
-        --listening-port=3478
-        --tls-listening-port=5349
-        --min-port=50000
-        --max-port=50100
-        --realm=${TURN_REALM:-atl.chat}
-        --server-name=${TURN_DOMAIN:-atl.chat}
-        --lt-cred-mech
-        --use-auth-secret
-        --static-auth-secret=${TURN_SECRET:-ChangeMe123!}
-        --no-multicast-peers
-        --mobility
-        --no-cli
-        --tls-min-version=1.2
-        --cipher-list=ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS
-        --log-file=stdout
-        --simple-log
+        -c /etc/coturn/turnserver.conf
     # Production resource limits
     deploy:
       resources:
