chore(turnserver.conf): remove unsupported TLS version options The no-tlsv1 and no-tlsv1_1 options are removed as they may not be supported in all COTURN versions. The cipher-list is sufficient to enforce strong ciphers.
fix(docker-compose.yml): use envsubst for dynamic configuration
The turnserver command is now wrapped in a shell command that uses envsubst to substitute environment variables in the configuration file. This allows for dynamic configuration of the TURN server based on environment variables, improving flexibility and deployment customization.

--- a/deployment/coturn/turnserver.conf
+++ b/deployment/coturn/turnserver.conf
@@ -67,8 +67,8 @@ pkey=/etc/ssl/private/privkey.pem
 cipher-list=ECDHE+AESGCM:ECDHE+CHACHA20:DHE+AESGCM:DHE+CHACHA20:!aNULL:!MD5:!DSS
 
 # Disable weak TLS versions (security)
-no-tlsv1
-no-tlsv1_1
+# Note: These options may not be supported in all COTURN versions
+# The cipher-list will enforce strong ciphers regardless
 
 # ============================================================================
 # NETWORK SECURITY
