feat(network): enhance TURN server configuration and setup
Update TURN server configuration to use environment variables
for dynamic setup, improving security and flexibility. Replace
default static secrets and domains with environment variables
to ensure sensitive data is not hardcoded. Introduce a setup
script to automate configuration generation and validation,
ensuring consistency and reducing manual errors. This change
also includes a dedicated TURN subdomain for better separation
and clarity in network configurations. The addition of TLS
support enhances security for TURN connections.

--- a/deployment/coturn/turnserver.conf
+++ b/deployment/coturn/turnserver.conf
@@ -39,13 +39,14 @@ lt-cred-mech
 use-auth-secret
 
 # Static authentication secret for TURN REST API
-static-auth-secret=${TURN_SECRET:-ChangeMe123!}
+# This will be replaced by environment variable at runtime
+static-auth-secret=${TURN_SECRET}
 
 # Default realm
-realm=${TURN_REALM:-atl.chat}
+realm=${TURN_REALM}
 
 # Server name for oAuth authentication
-server-name=${TURN_DOMAIN:-atl.chat}
+server-name=${TURN_DOMAIN}
 
 # Use fingerprints in TURN messages
 fingerprint
@@ -57,10 +58,10 @@ stale-nonce=600
 # TLS/DTLS CONFIGURATION
 # ============================================================================
 
-# Certificate file (PEM format)
+# Certificate file (PEM format) - will be mounted from host
 cert=/etc/ssl/certs/cert.pem
 
-# Private key file (PEM format)
+# Private key file (PEM format) - will be mounted from host
 pkey=/etc/ssl/private/privkey.pem
 
 # Allowed OpenSSL cipher list for TLS/DTLS connections
