--- a/templates/env/env.example
+++ b/templates/env/env.example
@@ -169,9 +169,7 @@ PROSODY_UPLOAD_SIZE_LIMIT=50485760
 # PROSODY_OAUTH_CLIENT_SECRET=your_oauth_secret
 
 # TURN/STUN server secret (for voice/video calls)
-TURN_SECRET=ChangeMe123!
-
-
+TURN_SECRET=vEIheW+T+MiuulmzX69ck7UJ3ZxuhZLZiykq9XvBU98=
 
 # ============================================================================
 # TURN/STUN SERVER CONFIGURATION (for voice/video calls)
@@ -185,10 +183,10 @@ TURN_MAX_PORT=50100                # RTP relay port range end (only 100 ports)
 
 # TURN server authentication
 TURN_USERNAME=prosody
-TURN_PASSWORD=ChangeMe123!
+TURN_PASSWORD=vEIheW+T+MiuulmzX69ck7UJ3ZxuhZLZiykq9XvBU98=
 
 # TURN server domain configuration (automatically uses PROSODY_DOMAIN if not set)
-TURN_DOMAIN=atl.chat
+TURN_DOMAIN=turn.atl.chat
 TURN_REALM=atl.chat
 
 # ============================================================================
