--- a/deployment/coturn/turnserver.conf
+++ b/deployment/coturn/turnserver.conf
@@ -32,10 +32,7 @@ max-port=50100
 # AUTHENTICATION & SECURITY
 # ============================================================================
 
-# Use long-term credential mechanism
-lt-cred-mech
-
-# TURN REST API flag (Time Limited Long Term Credential)
+# Use TURN REST API with shared secret (recommended for Prosody integration)
 use-auth-secret
 
 # Static authentication secret for TURN REST API
@@ -53,6 +50,21 @@ fingerprint
 
 # Extra security with nonce value having limited lifetime (10 minutes)
 stale-nonce=600
+
+# ============================================================================
+# LISTENER CONFIGURATION
+# ============================================================================
+
+# Explicitly bind to all interfaces for Docker
+listening-ip=0.0.0.0
+listening-ip=::1
+
+# Relay interface configuration
+relay-ip=0.0.0.0
+relay-ip=::1
+
+# External IP for relay (if behind NAT)
+# external-ip=YOUR_PUBLIC_IP
 
 # ============================================================================
 # TLS/DTLS CONFIGURATION
