--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -224,6 +224,20 @@ http {
             access_log off;
         }
 
+        # Prosody HTTP Status API (mod_http_status)
+        # https://modules.prosody.im/mod_http_status.html
+        location /status {
+            proxy_pass http://xmpp-prosody:5280/status;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_redirect off;
+            proxy_read_timeout 30s;
+            proxy_connect_timeout 10s;
+        }
+
         # Static files served by Nginx directly from /usr/share/nginx/html
         location /files {
             alias /usr/share/nginx/html/;
