--- a/deployment/reverse-proxy/nginx/nginx-docker.conf
+++ b/deployment/reverse-proxy/nginx/nginx-docker.conf
@@ -224,9 +224,9 @@ http {
             access_log off;
         }
 
-        # Prosody HTTP Status API (mod_http_status)
+        # Prosody HTTP Status API (mod_http_status) - MUST come before location /
         # https://modules.prosody.im/mod_http_status.html
-        location /status {
+        location = /status {
             proxy_pass http://xmpp-prosody:5280/status;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -254,6 +254,7 @@ http {
         }
 
         # Serve static files first, then proxy to Prosody
+        # This MUST come after all specific location blocks
         location / {
             root /usr/share/nginx/html;
             try_files $uri $uri/ @prosody_fallback;
